2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	Implemented bug #641319.

	* gmime/gmime-crypto-context.c (g_mime_crypto_recipient_*): New
	set of functions for manipulating a GMimeCryptoRecipient.
	(g_mime_decryption_result_*): New set of functions to manipulate a
	GMimeDecryptionResult
	(g_mime_crypto_context_decrypt): Now returns a
	GMimeDecryptionResult.

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt): Updated for API changes.

	* gmime/gmime-pkcs7-context.c (pkcs7_decrypt): Updated for API
	changes.

	* gmime/gmime-gpg-context.c (gpg_decrypt): Updated for API
	changes.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	API cleanup as well as preparing for the possibility of a
	multi-protocol CryptoContext.

	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_encrypt):
	Updated to use new APIs for getting the encryption protocol.
	(g_mime_multipart_encrypted_decrypt): Same.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_sign):
	Updated to use new APIs for getting the signature protocol.
	(g_mime_multipart_signed_verify): Same.

	* gmime/gmime-crypto-context.c (g_mime_crypto_context_get_*_protocol):
	New methods for getting the crypto protocol strings used by
	multipart/encrypted and multipart/signed parts.

	* gmime/gmime-pkcs7-context.c (pkcs7_get_*_protocol): Implemented.

	* gmime/gmime-gpg-context.c (gpg_get_*_protocol): Implemented.

2011-03-03  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-pkcs7-context.c (pkcs7_stream_seek): Added.

	* gmime/gmime.c (g_mime_init): Initialize gpgme.

2011-02-08  Jeffrey Stedfast  <fejj@novell.com>

	Implements feature request in bug #635663.

	* gmime/gmime-crypto-context.c (g_mime_signer_[g,s]et_sig_version):
	New functions to access new signature version member.
	(g_mime_signer_[g,s]et_sig_class): New functions to access new
	signature class member.

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Extract
	the signature class and version tokens.
